Reformat all the code